--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,150 @@
-body {
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+@import url('https://fonts.googleapis.com/css2?family=DS+Digital&display=swap');
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "poppins", sans-serif, Arial, Helvetica, sans-serif ;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button{
+  border: none;
+  outline: none;
+  appearance: none;
+  background: transparent;
+  color: inherit;
+}
+
+body{
+  background-color: #0f0f0f;
+  color: #ffffff;
+  background-size: 20px 20px;
+  background-image: linear-gradient(to right, #1A2980, #26D0CE);
+  background-size: 100% 2px;
+  
+}
+
+.App{
+  min-height: 100dvh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.Dev span a{
+    font-weight: 600;
+    color: #00ff62;
+}
+
+.calculator{
+  border: 3px solid rgba(255, 255, 255, 0.3);
+  border-radius: 10px;
+  max-width: 600px;
+  width: 100%;
+  overflow: hidden;
+  
+}
+
+.displayWindow{
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  padding: 1rem;
+  height: 120px;
+  flex-direction: column;
+}
+
+.displayWindow .expression{
+  overflow-x: auto;
+  width: 100%;
+  text-align: right;
+  font-weight: 650;
+  color: rgba(255, 255, 255, 0.3);
+  scrollbar-width: none;
+}
+
+.displayWindow .result{
+  font-size: 2.2rem;
+  font-weight: 600;
+  
+}
+
+.keysWindow{
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  padding: 1rem;
+  gap: 1rem;
+}
+
+.keysWindow button{
+  padding: 0.8rem 1.2rem;
+  font-size: 1.3rem;
+  cursor: pointer;
+  color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 5px;
+  transition: background-color 0.2s;
+}
+
+.keysWindow button:hover{
+  background-color: #003366
+}
+
+.keys_scientific{
+  width: 30%;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 5px;
+}
+
+
+.straightline{
+  margin-block: 1.5rem;
+  width: 2.5px;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.keys_basics{
+  flex: 1;
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+  gap: 0.5rem;
+}
+
+.keys_basics .equal{
+  background-color: #26D0CE;
+  color: #0f0f0f;
+  font-weight: 600;
+}
+button:active {
+  transform: scale(1.1); 
+}
+
+.keys_basics .number{
+  color: white;
+  font-weight: 600;
+}
+
+@media (max-width:610px){
+  body{
+    padding: 1rem;
+  }
+  .calculator{
+    margin: 1rem;
+  }
+  .keysWindow{
+    flex-direction: column;
+    gap: 0;
+  }
+  .straightline{
+    display: none;
+  }
+  .keys_scientific{
+    width: 100%;
+    grid-template-columns: repeat(5,1fr);
+
+  }
 }
